--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     font-size:16px;
     margin: 0;
     padding: 0;
+    background-color: #33A;
 }
 
 #cabecera{
@@ -13,7 +14,7 @@ body{
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 1em;
 }
 
 #cabecera #tagline{
@@ -23,13 +24,22 @@ body{
 }
 
 #container{
-    width: 70%;
-    padding: 1em;
+    width: 50%;
     text-align: left;
     border:1px solid #DDD;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 #container h1{
     font-size: 20px;
+}
+
+#cabecera img{
+    width: 30px;
+    height: auto;
+}
+
+#post{
+    padding: 1em;
+    background-color: #fff;
 }
