--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 1em;
 }
 
 #cabecera #tagline{
@@ -24,7 +24,6 @@ body{
 
 #container{
     width: 70%;
-    padding: 1em;
     text-align: left;
     border:1px solid #DDD;
     margin: 0 auto;
@@ -32,4 +31,14 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    padding: 1em;
+}
+
+#footer{
+    padding:1em;
+    background-color:rgb(56, 51, 51);
+    color: white;
 }
